testsuite/tests/dependent/should_fail/T13601.stderr

T13601.hs:19:16: error: [GHC-83865]
    • Couldn't match kind ‘Rep rep’ with ‘LiftedRep’
      Expected kind ‘*’, but ‘Logic a’ has kind ‘TYPE (Rep rep)’
    • In the first argument of ‘Boolean’, namely ‘(Logic a)’
      In the class declaration for ‘Eq’
